test/cli/test/check-deployment-namespace-cel/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
spec:
  background: true
  rules:
  - name: validate-deployment-namespace
    match:
      any:
      - resources:
          kinds:
          - Deployment
    validate:
      failureAction: Audit
      cel:
        expressions:
          - expression: "namespaceObject.metadata.name != 'default'"
            message: "Using 'default' namespace is not allowed for deployments."
