test/cli/test/check-deployment-namespace-cel/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Deployment
  policy: disallow-default-namespace
  resources:
  - bad-deployment
  result: fail
  rule: validate-deployment-namespace
- kind: Deployment
  policy: disallow-default-namespace
  resources:
  - good-deployment
  result: pass
  rule: validate-deployment-namespace
